Add: Shaders, Colours
Shaders: (Adroit), 3 Connections, Abyssinian Gold, Aces Full of Kings, Amaranth Atrocity, Alchemy Scorch.
Colours: Pink, Brown, Grey, Lime, Cyan.

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -62,5 +62,7 @@
     --color-purple: #9A6FA2;
     --color-pink: #B56C89;
     --color-white: #e0e0e0;
+    --color-grey: #4b4b4b;
     --color-black: #151515;
+    --color-brown: #493228;
 }
